docs(api): add request bodies
