# storage/api-docs/api-docs.json
@@ -106,6 +106,18 @@
                 ],
                 "summary": "Registra um novo produto",
                 "operationId": "store",
+                "requestBody": {
+                    "request": "Produto",
+                    "description": "Objeto de produto",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Product"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -177,6 +189,18 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "request": "Produto",
+                    "description": "Objeto de produto",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Product"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -269,6 +293,34 @@
                 "summary": "Atualiza os dados do usuário autenticado",
                 "description": "Retorna os dados do usuário atualizado",
                 "operationId": "update",
+                "requestBody": {
+                    "request": "Usuário",
+                    "description": "Objeto de usuário",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "schema": "UserAndPhones",
+                                "allOf": [
+                                    {
+                                        "$ref": "#/components/schemas/User"
+                                    },
+                                    {
+                                        "properties": {
+                                            "phones": {
+                                                "type": "array",
+                                                "items": {
+                                                    "$ref": "#/components/schemas/Phone"
+                                                }
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -314,6 +366,34 @@
                 "summary": "Registra um novo usuário",
                 "description": "Retorna os dados do usuário registrado",
                 "operationId": "store",
+                "requestBody": {
+                    "request": "Usuário",
+                    "description": "Objeto de usuário",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "schema": "UserAndPhones",
+                                "allOf": [
+                                    {
+                                        "$ref": "#/components/schemas/User"
+                                    },
+                                    {
+                                        "properties": {
+                                            "phones": {
+                                                "type": "array",
+                                                "items": {
+                                                    "$ref": "#/components/schemas/Phone"
+                                                }
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -460,7 +540,7 @@
             "Phone": {
                 "properties": {
                     "number": {
-                        "description": "Número do telefone",
+                        "description": "Número do telefone no formato (99) 99999-9999",
                         "type": "string"
                     }
                 },
